--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">About Us</h2>
-          <p class="text-white-50">We are a group of engineers and scientists who wanted to change the way people drink Gin. Gin is an increasingly popular drink of choice, with the distilleries using copper and glass to create a sophisticated atmosphere. Our vision was to bring the distillery experience to a bar, but without the long waiting times.</p>
+          <p class="text-white-50">We are a group of engineers and scientists who wanted to change the way people drink gin. Gin is an increasingly popular drink of choice, with the distilleries using copper and glass to create a sophisticated atmosphere. Our vision was to bring the distillery experience to a bar, but without the long waiting times.</p>
         </div>
       </div>
       <img src="img/inverted.jpg" class="img-fluid" alt="diagram of the product layout">
@@ -148,7 +148,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Cooling System</h4>
-                <p class="mb-0 text-white-50">Finally, the tonic water is cooled by the tubing it flows through being submerged in an ice bath. This means no ice is necessary in the drink itself, resulting in a cold beverage that doesn’t become diluted over time.</p>
+                <p class="mb-0 text-white-50">The tonic water is cooled by the tubing it flows through being submerged in an ice bath. This means no ice is necessary in the drink itself, resulting in a cold beverage that doesn’t become diluted over time.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
