--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </div>
 
       <!-- Featured Project Row -->
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5 mt-2">
         <div class="col-xl-8 col-lg-7">
           <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="image of the pumps used to move the gin and tonic through the system">
         </div>
