--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       </div>
 
       <!-- Project Two Row -->
-      <div class="row justify-content-center no-gutters">
+      <div class="row justify-content-center no-gutters mb-4">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/demo-image-02.jpg" alt="image of the cooling system used to chill the tonic">
         </div>
