--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters mb-4">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="image of the cooling system used to chill the tonic">
+          <img class="img-fluid" src="img/cooling-system.jpg" alt="image of the cooling system used to chill the tonic">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
@@ -159,7 +159,7 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5 mt-4">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="image of the pumps used to move the gin and tonic through the system">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/pumping-section.jpg" alt="image of the pumps used to move the gin and tonic through the system">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
