--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters mb-4">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/cooling-system.jpg" alt="image of the cooling system used to chill the tonic">
+          <img class="img-fluid" src="img/cooling-section.jpg" alt="image of the cooling system used to chill the tonic">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
