--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5 mt-8">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/pumping-section.jpg" alt="image of the pumps used to move the gin and tonic through the system">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/pumping-section.JPG" alt="image of the pumps used to move the gin and tonic through the system">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
